kustomize/overlay/prod/qetesting-prod-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qetesting-prod
  labels:
    environmentId: env_c327b5e9-bf9f-465a-b67b-ebee74be369d
    projectId: project_b7c64762-48e8-4b3b-a0b8-3b97faeb217f
    projectName: qetesting
    environmentName: prod
    organizationId: org_20c6c833-c6da-41ca-85b9-9573910c5b75
    goldilocks.fairwinds.com/enabled: 'true'
